Import social media icons from fontawes0me

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">ABOUT US</a></li>
                     <li><a href="#">OUR WORK</a></li>
                     <li><a href="#">SERVICES</a></li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="contact-us.html">CONTACT US</a></li>
                 </ul>
             </div>
         </nav>
@@ -29,6 +29,7 @@
             <a href="" class="hero-btn">Welcome</a>
 
         </div>
+        
     </section>
 </body>
 
