change button to a tag

--- a/contact-us.html
+++ b/contact-us.html
@@ -32,7 +32,7 @@
    <h2>Let’s discuss your next career achievement</h2>
    <p>Phone: 123456789</p>
    <p>Email: Click here</p>
-   <button type="submit">Request a personal appointment here</button>
+   <a href="request.html">Request a personal appointment here</a>
    </div>
    <div>
        <h2>Office hours</h2>
