Add options to id industry

--- a/request.html
+++ b/request.html
@@ -33,7 +33,10 @@
       <br>
       <label for="county">Your Current County(required)</label>
       <br>
-      <input type="text" name="county" id="county">
+      <select name="county" id="county">
+        
+      </select>
+
       <br>
       <h3>Cover Letter</h3>
       <p>Upload your cover letter(Optional)</p>
@@ -57,11 +60,25 @@
       <select id="industry" name="industry">
         <option value="accounting">Accounting</option>
         <option value="banking and finance">Banking and Finance</option>
-        <option value="Agriculture & Conservation"></option>
+        <option value="Agriculture & Conservation">Agriculture & Conservation</option>
+        <option value="Legal">Legal</option>
+        <option value="Logistic and Transportation">Logistic and Transportation</option>
+        <option value="Healthcare and Medical">Healthcare and Medical</option>
+        <option value="Information Technology">Information Technology</option>
+        <option value="Construction">Construction</option>
+        <option value="Education and Training">Education and Training</option>
+        <option value="Science and Technology">Science and Technology</option>
+        <option value="Hospitality and Tourism">Hospitality and Tourism</option>
+        <option value="HR & Recruitment">HR & Recruitment</option>
+        <option value="Advertising & Media">Advertising & Media</option>
+        <option value="tAdministration & Office suppor">Administration & Office suppor</option>
+        <option value="Design,Arts & Architecture">Design,Arts & Architecture</option>
       </select>
 
     
     </form>
   </div>
+  <script src="./js/script.js"></script>
+
 </body>
 </html>
