--- a/request.html
+++ b/request.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link src="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -42,7 +43,7 @@
       <p>Upload your cover letter(Optional)</p>
       <p><button>Choose File</button>No file chosen</p>
       <h3>OR</h3>
-      <p>Please enter ypur resume here as text(Optional)</p>
+      <p>Please enter your resume here as text(Optional)</p>
       <textarea rows="20" cols="50" name="resume" form="usrform"></textarea>
       <h3>Step 2: Work Details</h3>
       <label for="situation">Which situation describe you best?</label>
