Debugging the contact file

--- a/request.html
+++ b/request.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link src="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/contact.css">
   <title>Document</title>
 </head>
+
 <body>
   <div>
     <h2>Request your free career consultation.</h2>
-    <p>Fill in the form below and talk to one of our career coaches at SCGuide to discuss your next career step and strategise your career path to reach your full potentials and goals</p>
+    <p>Fill in the form below and talk to one of our career coaches at SCGuide to discuss your next career step and
+      strategise your career path to reach your full potentials and goals</p>
   </div>
   <div>
     <form method="POST">
@@ -35,7 +38,7 @@
       <label for="county">Your Current County(required)</label>
       <br>
       <select name="county" id="county">
-        
+
       </select>
 
       <br>
@@ -50,7 +53,8 @@
       <br>
       <select id="situation" name="situation">
         <option value="unemployed">Unemployed</option>
-        <option value="Seeking advancement with my current employer">Seeking advancement with my current employer</option>
+        <option value="Seeking advancement with my current employer">Seeking advancement with my current employer
+        </option>
         <option value="Seeking transition to a new employer">Seeking transition to a new employer</option>
         <option value="I want to change in career direction">I want to change in career direction</option>
         <option value="I want to manage my career beter">I want to manage my career beter</option>
@@ -76,10 +80,11 @@
         <option value="Design,Arts & Architecture">Design,Arts & Architecture</option>
       </select>
 
-    
+
     </form>
   </div>
   <script src="./js/script.js"></script>
 
 </body>
+
 </html>
