ft:add  information section and styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 <body>
     <section class="header">
-        <nav>
+        <div id="myNav" class="overlay">
+            
+        </div>
+       <!--
+           <nav>
             <div class="nav_links">
                 <ul>
                     <li><a class="active" href="#">HOME</a></li>
@@ -23,6 +27,8 @@
                 </ul>
             </div>
         </nav>
+
+       --> 
 
         <div class="text_box">
             <h1>STUDENT <span>CAREER GUIDE</span></h1>
