--- a/contact-us.html
+++ b/contact-us.html
@@ -18,33 +18,33 @@
       goals or other aspects of your career? Do you want to be more competitive at interviews and take control of your
       progression and job prospects?
 
-      At SCGuide, we are here to help you get results. We provide a full range of services, including career management
-      programs, effective coaching packages and executive coaching services.
+      At SCGuide, we are here to help you get results. We provide a full range of services, including <span> management
+      programs, effective coaching packages </span>and <span> coaching services.</span>
 
       Our services are based on your individual needs and goals. If you are looking for better career options, a great
       starting job or assistance with specific problems, we can help you.
 
     </p>
-    <h1>Call or email our consultants today</h1>
+    <h2>Call or email our consultants today</h2>
     <p>Assisting our clients in Kenya and East Africa, our team are ready to help you achieve your career objectives.
       Give us a call, or fill in our form below to arrange an appointment. We are happy to provide any guidance, support
       and help if you need. Let us discuss your next career step and strategise your career path to reach your full
       potentials and goals.</p>
 
-    <div>
-      <div>
-        <h2>Let’s discuss your next career achievement</h2>
-        <p>Phone: 123456789</p>
-        <p>Email: Click here</p>
+    <div class="media">
+      <div class="info">
+        <h3>Let’s discuss your next career achievement</h3>
+        <p>Phone: <span>123456789</span></p>
+        <p>Email:<span>Click here</span></p>
         <a href="request.html">Request a personal appointment here</a>
       </div>
-      <div>
-        <h2>Office hours</h2>
+      <div class="info">
+        <h3>Office hours</h3>
         <p>Monday – Friday 9am – 7pm</p>
         <p>(Except for public holidays)</p>
       </div>
-      <div>
-        <h2>Let’s connect – Get social</h2>
+      <div class="info">
+        <h3>Let’s connect – Get social</h3>
         <div class="images">
           <i class="fab fa-facebook"></i>
           <i class="fab fa-youtube"></i>
@@ -53,10 +53,10 @@
 
         </div>
 
-
       </div>
     </div>
-    <div>
+    <div class="map1">
+      <div>
       <form method="POST">
         <h2>Send us your questions</h2>
         <label for="name">Your Name(required)</label>
@@ -87,9 +87,15 @@
         <br>
         <input type="text" name="google" id="google">
         <br>
-        <button type="submit">Send</button>
+        <button class="send" type="submit">Send</button>
 
       </form>
+    </div>
+    <div class="map">
+      <h1>NAIROBI-KENYA</h1>
+      <h2>WESTLANDS(Main Office)</h2>
+      <img src="./images/map.png">
+    </div>
     </div>
 
   </div>
