--- a/employment.html
+++ b/employment.html
@@ -158,11 +158,19 @@
             <p>
                 <ol>
                     <li>Lack of professionalism.</li>
+                    <p>Always enhance professionalism in every type of encounter at your work place or job interview</p>
                     <li>Frightning online presence.</li>
+                    <p>Create a good web and online experience </p>
                     <li>outdated Resumes and CVs.</li>
+                    <p>Aways update your resumes and the necessary skills.Your curriculum vitae must always be upto date </p>
                     <li>Failing to listen.</li>
+                    <p>Always learn to listen and be careful while listening</p>
                     <li>Being unprepared</li>
+                    <p>Be ready at every instance.This tells employers that you can tackle anything at any given time</p>
                     <li>Speaking badly about your past employment.</li>
+                    <p>If you have a past working experience, never talk ill about it.Always be positive about everything including
+                      your past employer.
+                    </p>
                 </ol>
             </p>
 
