Add new file and debug' git status clear

--- a/request.html
+++ b/request.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+  <div class="request">
   <div>
-    <h2>Request your free career consultation.</h2>
+    <h1>Request your free career consultation.</h1>
     <p>Fill in the form below and talk to one of our career coaches at SCGuide to discuss your next career step and
       strategise your career path to reach your full potentials and goals</p>
   </div>
@@ -79,12 +80,18 @@
         <option value="tAdministration & Office suppor">Administration & Office suppor</option>
         <option value="Design,Arts & Architecture">Design,Arts & Architecture</option>
       </select>
+      <br>
+      <label for="level">What is your current level?</label>
+      <br>
+      <select name="level" id="level"></select>
+      <br>
+      <button class="send" type="submit">Send</button>
 
 
     </form>
   </div>
   <script src="./js/script.js"></script>
-
+</div>
 </body>
 
 </html>
