fix: This commit renames html and css files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="skills_center.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="skills_center">
@@ -97,7 +97,7 @@
                     <li>Career visualisation</li>
                     <li></li>
                 </ul>
-                So to be adapt zwith skills needed, one should do personal evaluation. This entails:
+                So to be conversant with skills needed, one should do personal evaluation. This entails:
                 <ul>
                     <li>Do SWOT analysis</li>
                     <li>Have a career visualization</li>
