--- a/contact-us.html
+++ b/contact-us.html
@@ -100,6 +100,7 @@
     </div>
 
   </div>
+  <footer>
   <div id="footer">
     <div class="info">
       <h3>The core our business</h3>
@@ -135,6 +136,7 @@
       
     
   </div>
+  </footer>
   <script src="./js/script.js"></script>
 </body>
 
