st:CSS -rename css file

--- a/employment.html
+++ b/employment.html
@@ -160,7 +160,7 @@
                     <li>Lack of professionalism.</li>
                     <p>Always enhance professionalism in every type of encounter at your work place or job interview</p>
                     <li>Frightning online presence.</li>
-                    <p>Create a good web and online experience </p>
+                    <p>Create a good web and online experience.</p>
                     <li>outdated Resumes and CVs.</li>
                     <p>Aways update your resumes and the necessary skills.Your curriculum vitae must always be upto date </p>
                     <li>Failing to listen.</li>
